# sonde-notifier

./: .gitignore  README.md  config.example.toml  pyproject.toml  sonde-notifier.service
src/: autorx.py  config.py  logging.py  main.py  notifier.py  prediction.py
src/notification_services/: __init__.py  discord_webhook.py  email.py  gotify.py  notification_service.py  ntfy.py
